fix background image div on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -98,12 +98,12 @@ h3 {
 }
 
 @media (max-width: 992px) {
-  body {
+  .background-image {
     background-position: 80%;
     background-size: cover;
   }
 
-  :root.dark body {
+  :root.dark .background-image {
     background-position: center;
   }
 }
